<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitutloCrudFrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_frase"
        android:textColor="#040000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        app:layout_constraintTop_toTopOf="@+id/tvTitutloCrudFrase"
        tools:layout_editor_absoluteX="185dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiFechaProgramada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/fecha_programada" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/textInputLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        tools:layout_editor_absoluteX="158dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiTextoFrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/texto_frase" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/spAutores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
        tools:layout_editor_absoluteX="120dp" />

    <Spinner
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/spCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/spAutores"
        tools:layout_editor_absoluteX="2dp" />

    <Button
        android:id="@+id/btInsertarFrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/bt_insertar_frase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spCategorias" />
</androidx.constraintlayout.widget.ConstraintLayout>