<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btInsertarAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="136dp"
        android:text="Insertar Autor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitutloCrudAutor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/nombre_autor" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        app:errorEnabled="true"
        android:layout_marginTop="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:layout_editor_absoluteX="149dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiNacimiento"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/anyo_nacimiento" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/textInputLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        tools:layout_editor_absoluteX="160dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiMuerte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#FFFFFF"
            android:hint="@string/anyo_muerte" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTitutloCrudAutor"
        android:layout_width="216dp"
        android:layout_height="42dp"
        android:layout_marginTop="54dp"
        android:text="@string/add_autor"
        android:textColor="#120000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/textInputLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="25"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        tools:layout_editor_absoluteX="191dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiProfesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/profesion" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>